fix: resolve scrollbar style pollution issue (close #19)

--- a/src/assets/styles/V3Emoji.scss
+++ b/src/assets/styles/V3Emoji.scss
@@ -1,17 +1,19 @@
-@import "./variable.scss";
-p {
-  margin: 0;
-}
-::-webkit-scrollbar {
-  /*高宽分别对应横竖滚动条的尺寸*/
-  width: 6px;
-  height: 6px;
-}
-::-webkit-scrollbar-thumb {
-  border-radius: 10px !important;
-  background-color: rgb(216, 216, 216);
-}
-::-webkit-scrollbar-track {
-  border-radius: 10px !important;
-  background: #ededed !important;
+@import './variable.scss';
+#EmojiItem {
+  p {
+    margin: 0;
+  }
+  ::-webkit-scrollbar {
+    /*高宽分别对应横竖滚动条的尺寸*/
+    width: 6px;
+    height: 6px;
+  }
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px !important;
+    background-color: rgb(216, 216, 216);
+  }
+  ::-webkit-scrollbar-track {
+    border-radius: 10px !important;
+    background: #ededed !important;
+  }
 }
